# Projects

./: .gitignore  README.md  Titanic_from_kaggle.ipynb  false_listing.ipynb  house_price.ipynb
Data Analysis/: Titanic_from_kaggle.ipynb  false_listing.ipynb  house_price.ipynb
Quantitative Analysis/MHIDSS/: .env.example  .gitignore  CLAUDE.md  main.py  pyproject.toml
Quantitative Analysis/MHIDSS/config/: fred_series.py  normalization.py  settings.py  weights.py  wrds_fields.py
Quantitative Analysis/MHIDSS/data/fetchers/: base.py  fred_fetcher.py  technical_fetcher.py  wrds_fetcher.py
Quantitative Analysis/MHIDSS/data/models/: fundamental_data.py  macro_data.py  technical_data.py
Quantitative Analysis/MHIDSS/engine/: entry_score.py
Quantitative Analysis/MHIDSS/engine/horizons/: base.py  long_term.py  mid_term.py  short_term.py
Quantitative Analysis/MHIDSS/engine/normalizers/: base.py  minmax.py  percentile.py  zscore.py
Quantitative Analysis/MHIDSS/engine/scorers/: base.py  fundamental_scorer.py  macro_scorer.py  technical_scorer.py
Quantitative Analysis/MHIDSS/reports/: report_builder.py
Quantitative Analysis/MHIDSS/reports/formatters/: csv_formatter.py  html_formatter.py  json_formatter.py
Quantitative Analysis/MHIDSS/tests/: conftest.py
Quantitative Analysis/MHIDSS/tests/integration/: test_fred_live.py  test_full_pipeline.py
Quantitative Analysis/MHIDSS/tests/unit/: test_entry_score.py  test_horizons.py  test_normalizers.py  test_scorers.py
Quantitative Analysis/MHIDSS/utils/: date_utils.py  logging.py  math_utils.py  retry.py  validation.py
(+26 files in other folders)
