[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "mhidss"
version = "0.1.0"
description = "Multi-Horizon Investment Decision Support System"
requires-python = ">=3.11"
dependencies = [
    "fredapi>=0.5.1",
    "wrds>=3.1.6",
    "pandas>=2.0",
    "numpy>=1.26",
    "pandas-ta>=0.3.14b",
    "yfinance>=0.2.40",
    "pydantic>=2.5",
    "structlog>=24.1",
    "pyarrow>=14.0",
    "typer>=0.12",
    "rich>=13.7",
    "jinja2>=3.1",
    "python-dotenv>=1.0",
    "tenacity>=8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
    "responses>=0.25",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[project.scripts]
mhidss = "main:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ""

[tool.coverage.run]
omit = ["tests/*", "main.py", "*/migrations/*"]
